More docs for event-loop based scheduling